--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -9,11 +9,20 @@
 }
 
 .navbar-li {
-  width: 150px;
-  height: 31px;
-  padding: 5px 40px;
-  border: solid 1px #d6d6d6;
   border-radius: 2px;
   text-align: center;
   font-weight: 500;
+}
+
+.link-active {
+  border: solid 1px #1797ff;
+  border-radius: 2px;
+  padding: 5px 40px;
+  color: #1797ff;
+}
+
+.link {
+  color: #606060;
+  border: solid 1px #d6d6d6;
+  padding: 5px 40px;
 }
