--- a/src/components/HitsItem/hitsItem.css
+++ b/src/components/HitsItem/hitsItem.css
@@ -3,10 +3,11 @@
   height: 90px;
   border-radius: 6px;
   border: solid 1px #979797;
-  margin: 20px 20px 20px 0px;
+  margin: 20px;
   display: flex;
   justify-content: space-between;
 }
+
 .hits-container:hover {
   background-color: #fff;
   opacity: 0.4;
@@ -41,4 +42,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@media (max-width: 600px) {
+  .hits-title {
+    width: calc(300px - 68px);
+    height: 100%;
+  }
 }
